--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 output/
 hostfiles/
 internal_scripts/
+wandb/
+.venv/
+.env
+.DS_Store
+.idea/
+.vscode/
+.pytest_cache/
+.cache/
+debug_log_*.txt
